objects/MMPJ_XRM_RelationSociete__c.object
<CustomObject>
    <description>Junction object to manage links between companies</description>
    <fields>
        <fullName>MMPJ_XRM_Cle__c</fullName>
        <formula>CASESAFEID(MMPJ_XRM_Livreur__c) &amp; CASESAFEID(MMPJ_XRM_Societe_liee__c)</formula>
        <label>Clé</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Livreur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Société</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Liste des sociétés liées</relationshipLabel>
        <relationshipName>MMPJ_XRM_Pressoir_Livreur1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Societe_liee__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Société liée</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Liste des livreurs</relationshipLabel>
        <relationshipName>MMPJ_XRM_Pressoir_Livreur</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Type_de_relation_livreur__c</fullName>
        <formula>MMPJ_XRM_Livreur__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type de relation (Société)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPK_XRM_Type_Relation__c</fullName>
        <formula>MMPJ_XRM_Societe_liee__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type de relation</label>
        <type>Text</type>
    </fields>
    <label>Relation Société</label>
    <nameField>
        <displayFormat>Record-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relation Sociétés</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>